...
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="aN2-L1-V0O"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="onF-mD-JOJ">
                                <rect key="frame" x="172" y="310" width="70" height="47"/>
                                <accessibility key="accessibilityConfiguration" identifier="startButton"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="27"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="startGameNew:" destination="RH6-WA-K5S" eventType="touchUpInside" id="qXp-4g-9lA"/>
...
